--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     </head>
 
     <body>
-        <h2> Tela de Login </h2>
+        <h2> Login Screen </h2>
+
+        <div>
+            <input type="text" placeholder="User"> 
+            <p>
+            <input type="password" placeholder="Password">
+            <p>
+            <button> Login </button>
+        </div>
 
     </body>
 </html>
